--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
       margin: 0;
     }
 
-    #sign {
+    #sign .fa-plus-square {
       cursor: pointer;
       font-size: 3em;
     }
@@ -220,6 +220,10 @@ margin-left: 1em;
     border: 1px solid transparent;
     border-radius: 0.25rem;
     }
+
+    .game-container .public-flags{
+      display: none;
+    }
   </style>
 </head>
 
@@ -248,7 +252,7 @@ margin-left: 1em;
         <div class="form-group">
           <input type="text" placeholder="Enter Game Code" id="gameCodeInput" />
         </div>
-        <button type="submit" class="btn btn-danger" id="joinGameButton">
+        <button type="submit" class="btn btn-danger my-0" id="joinGameButton">
           Join Game
         </button>
       </div>
@@ -292,7 +296,7 @@ margin-left: 1em;
         </div>
         <div class="public-flags">
           <p class="text-danger">
-            RED FLAGS
+            
           </p>
         </div>
         <div class="red-flag-section text-danger text-center">
@@ -368,7 +372,7 @@ margin-left: 1em;
     </ol>
   </section>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+  <script src="https://cdn.socket.io/socket.io-2.3.1.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> -->
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
