--- a/frontend/index.html
+++ b/frontend/index.html
@@ -271,7 +271,7 @@ margin-left: 1em;
         </button>
         <div>OR</div>
         <div class="form-group">
-          <input type="text" placeholder="Enter Game Code" id="gameCodeInput" />
+          <input type="text" placeholder="Enter Room Code" id="gameCodeInput" />
         </div>
         <button type="submit" class="btn btn-danger my-0" id="joinGameButton">
           Join Game
@@ -283,7 +283,7 @@ margin-left: 1em;
   <div id="gameScreen" class="h-100">
     <div class="d-flex flex-column align-items-center justify-content-center h-100">
 
-      <h1  class="mb-4">Your game code is: <span id="gameCodeDisplay"></span></h1>
+      <h1  class="mb-4">Room Code: <span id="gameCodeDisplay"></span></h1>
       <div class="alert">
       </div>
       <div class="user"><span></span></div>
