updated new round button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
       margin: 0;
     }
 
-    #sign .fa-plus-square {
+    #sign .fa-plus {
       cursor: pointer;
       font-size: 8em;
     }
@@ -320,7 +320,7 @@ margin-left: 1em;
         <div class="red-flag-row">
         <div class="red-flag-section text-danger text-center">
           <div id="sign">
-            <i class="text-danger far fa-plus-square"></i>
+            <i class="text-danger fas fa-plus"></i>
           </div>
         </div>
       </div>
