--- a/frontend/index.html
+++ b/frontend/index.html
@@ -266,6 +266,10 @@ margin-left: 1em;
     <div class="h-100">
       <div class="d-flex flex-column align-items-center justify-content-center h-100">
         <h1  class="mb-4">Red Flags Online</h1>
+        <div class="user"><span></span></div>
+        <button type="submit" class="btn btn-danger" id="genNewUser">
+          Generate New Username
+        </button>
         <button type="submit" class="btn btn-danger" id="newGameButton">
           Create New Game
         </button>
