--- a/frontend/index.html
+++ b/frontend/index.html
@@ -267,7 +267,7 @@ margin-left: 1em;
       <div class="d-flex flex-column align-items-center justify-content-center h-100">
         <h1  class="mb-4">Red Flags Online</h1>
         <div class="user"><span></span></div>
-        <button type="submit" class="btn btn-danger" id="genNewUser">
+        <button type="submit" class="btn btn-danger" id="genNewUserEntered">
           Generate New Username
         </button>
         <button type="submit" class="btn btn-danger" id="newGameButton">
