--- a/frontend/index.html
+++ b/frontend/index.html
@@ -250,14 +250,14 @@ margin-left: 1em;
 
 <body>
   <section id="login-section" class="container login-section">
-    <h1 class="text-center mb-4">Red Flags Online</h1>
+
     <form class="loginForm">
-      <div class="user"><span></span></div>
-      <button type="submit" class="btn btn-danger" id="genNewUser">
+      <div class="user mt-5"><span></span></div>
+      <button type="submit" class="btn btn-danger mt-2" id="genNewUser">
         Generate New Username
       </button>
-
-      <button type="submit" class="btn btn-danger" id="loginGameButton">
+      <h1 class="text-center my-4">Red Flags Online</h1>
+      <button type="submit" class="btn btn-danger mt-0" id="loginGameButton">
         Play Game
       </button>
     </form>
@@ -265,12 +265,13 @@ margin-left: 1em;
   <section id="initialScreen" class="container home-section">
     <div class="h-100">
       <div class="d-flex flex-column align-items-center justify-content-center h-100">
-        <h1  class="mb-4">Red Flags Online</h1>
-        <div class="user"><span></span></div>
-        <button type="submit" class="btn btn-danger" id="genNewUserEntered">
+
+        <div class="user mt-5"><span></span></div>
+        <button type="submit" class="btn btn-danger mt-2" id="genNewUserEntered">
           Generate New Username
         </button>
-        <button type="submit" class="btn btn-danger" id="newGameButton">
+        <h1  class="my-4">Red Flags Online</h1>
+        <button type="submit" class="btn btn-danger mt-0" id="newGameButton">
           Create New Game
         </button>
         <div>OR</div>
