--- a/frontend/index.html
+++ b/frontend/index.html
@@ -252,13 +252,13 @@ margin-left: 1em;
   <section id="login-section" class="container login-section">
 
     <form class="loginForm">
-      <div class="user mt-5"><span></span></div>
-      <button type="submit" class="btn btn-danger mt-2" id="genNewUser">
-        Generate New Username
-      </button>
       <h1 class="text-center my-4">Red Flags Online</h1>
       <button type="submit" class="btn btn-danger mt-0" id="loginGameButton">
         Play Game
+      </button>
+      <div class="user mt-5"><span></span></div>
+      <button type="submit" class="btn btn-danger mt-2" id="genNewUser">
+        Generate New Username
       </button>
     </form>
   </section>
@@ -266,10 +266,7 @@ margin-left: 1em;
     <div class="h-100">
       <div class="d-flex flex-column align-items-center justify-content-center h-100">
 
-        <div class="user mt-5"><span></span></div>
-        <button type="submit" class="btn btn-danger mt-2" id="genNewUserEntered">
-          Generate New Username
-        </button>
+
         <h1  class="my-4">Red Flags Online</h1>
         <button type="submit" class="btn btn-danger mt-0" id="newGameButton">
           Create New Game
@@ -280,6 +277,10 @@ margin-left: 1em;
         </div>
         <button type="submit" class="btn btn-danger my-0" id="joinGameButton">
           Join Game
+        </button>
+        <div class="user mt-5"><span></span></div>
+        <button type="submit" class="btn btn-danger mt-2" id="genNewUserEntered">
+          Generate New Username
         </button>
       </div>
     </div>
@@ -326,6 +327,7 @@ margin-left: 1em;
         <div class="red-flag-section text-danger text-center">
           <div id="sign">
             <i class="text-danger fas fa-plus"></i>
+            <div><b>SELECT CARD</b></div>
           </div>
         </div>
       </div>
